RESOLVED FIXED131041
Regression: AX: list heuristics sometimes determined as presentational even when explicit roles applied
https://bugs.webkit.org/show_bug.cgi?id=131041
Summary Regression: AX: list heuristics sometimes determined as presentational even w...
James Craig
Reported 2014-04-01 09:14:52 PDT
Created attachment 228289 [details] test case (last list in page) AX: list heuristics sometimes determined as presentational even when explicit roles applied In the test case, the first list is a standard list, and the second is correctly determined as presentational, but the last list is incorrectly determined as presentational. It should retain the list role because the element uses explicit role values. (This bug may be masking another issue reported in bug 131025. That one is not currently reproducible, but I'm not convinced it's gone.)
Attachments
test case (last list in page) (1.00 KB, text/html)
2014-04-01 09:14 PDT, James Craig
no flags
screen shot showing computed group role (93.50 KB, image/png)
2014-04-01 09:24 PDT, James Craig
no flags
patch (3.34 KB, patch)
2014-04-04 09:58 PDT, chris fleizach
mario: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion (491.83 KB, application/zip)
2014-04-04 11:25 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 (543.52 KB, application/zip)
2014-04-04 11:59 PDT, Build Bot
no flags
patch (3.30 KB, patch)
2014-04-05 17:31 PDT, chris fleizach
mario: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 (564.54 KB, application/zip)
2014-04-05 18:35 PDT, Build Bot
no flags
Radar WebKit Bug Importer
Comment 1 2014-04-01 09:15:46 PDT
James Craig
Comment 2 2014-04-01 09:24:15 PDT
Created attachment 228292 [details] screen shot showing computed group role
James Craig
Comment 3 2014-04-01 18:39:31 PDT
This is a regression from the recent work on list heuristics.
chris fleizach
Comment 4 2014-04-04 09:58:32 PDT
Build Bot
Comment 5 2014-04-04 11:02:53 PDT
Comment on attachment 228598 [details] patch Attachment 228598 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5350323807846400 New failing tests: accessibility/list-detection.html
Build Bot
Comment 6 2014-04-04 11:25:46 PDT
Comment on attachment 228598 [details] patch Attachment 228598 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5683490863448064 New failing tests: accessibility/list-detection.html
Build Bot
Comment 7 2014-04-04 11:25:50 PDT
Created attachment 228610 [details] Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 8 2014-04-04 11:59:28 PDT
Comment on attachment 228598 [details] patch Attachment 228598 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5988407771660288 New failing tests: platform/mac/fast/scrolling/scroll-iframe-latched-mainframe.html accessibility/list-detection.html platform/mac/fast/scrolling/scroll-select-latched-mainframe.html platform/mac/fast/scrolling/scroll-div-latched-mainframe.html
Build Bot
Comment 9 2014-04-04 11:59:32 PDT
Created attachment 228611 [details] Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
chris fleizach
Comment 10 2014-04-05 17:31:33 PDT
Created attachment 228690 [details] patch The first patch was a false start. The real problem was that display:table was being used on the <ul> which inserts anonymous RenderTableCells, which cause the children of the list to be "wrong". I think the right fix is to ignore RenderTableCells without node()s, which should indicate they've been created as a side effect of display:table and do not add semantic information.
WebKit Commit Bot
Comment 11 2014-04-05 17:33:54 PDT
Attachment 228690 [details] did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityTableCell.cpp:67: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 12 2014-04-05 18:35:03 PDT
Comment on attachment 228690 [details] patch Attachment 228690 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4662735514107904 New failing tests: platform/mac/fast/scrolling/scroll-iframe-latched-mainframe.html platform/mac/fast/scrolling/scroll-select-latched-mainframe.html media/W3C/audio/canPlayType/canPlayType_application_octet_stream_with_codecs_1.html platform/mac/fast/scrolling/scroll-div-latched-mainframe.html
Build Bot
Comment 13 2014-04-05 18:35:07 PDT
Created attachment 228692 [details] Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
chris fleizach
Comment 14 2014-04-05 19:13:46 PDT
(In reply to comment #11) > Attachment 228690 [details] did not pass style-queue: > > > ERROR: Source/WebCore/accessibility/AccessibilityTableCell.cpp:67: Multi line control clauses should use braces. [whitespace/braces] [4] > Total errors found: 1 in 5 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. This seems wrong...
chris fleizach
Comment 15 2014-04-05 19:14:17 PDT
(In reply to comment #12) > (From update of attachment 228690 [details]) > Attachment 228690 [details] did not pass mac-wk2-ews (mac-wk2): > Output: http://webkit-queues.appspot.com/results/4662735514107904 > > New failing tests: > platform/mac/fast/scrolling/scroll-iframe-latched-mainframe.html > platform/mac/fast/scrolling/scroll-select-latched-mainframe.html > media/W3C/audio/canPlayType/canPlayType_application_octet_stream_with_codecs_1.html > platform/mac/fast/scrolling/scroll-div-latched-mainframe.html these all seem unrelated
chris fleizach
Comment 16 2014-04-07 22:58:37 PDT
(In reply to comment #10) > Created an attachment (id=228690) [details] > patch > > The first patch was a false start. The real problem was that display:table was being used on the <ul> which inserts anonymous RenderTableCells, which cause the children of the list to be "wrong". > > I think the right fix is to ignore RenderTableCells without node()s, which should indicate they've been created as a side effect of display:table and do not add semantic information. Mario, can you review this one again. Thanks
Mario Sanchez Prada
Comment 17 2014-04-09 07:58:09 PDT
(In reply to comment #14) > (In reply to comment #11) > > Attachment 228690 [details] [details] did not pass style-queue: > > > > > > ERROR: Source/WebCore/accessibility/AccessibilityTableCell.cpp:67: Multi line control clauses should use braces. [whitespace/braces] [4] > > Total errors found: 1 in 5 files > > > > > > If any of these errors are false positives, please file a bug against check-webkit-style. > > This seems wrong... I agree (In reply to comment #15) > (In reply to comment #12) > > (From update of attachment 228690 [details] [details]) > > Attachment 228690 [details] [details] did not pass mac-wk2-ews (mac-wk2): > > Output: http://webkit-queues.appspot.com/results/4662735514107904 > > > > New failing tests: > > platform/mac/fast/scrolling/scroll-iframe-latched-mainframe.html > > platform/mac/fast/scrolling/scroll-select-latched-mainframe.html > > media/W3C/audio/canPlayType/canPlayType_application_octet_stream_with_codecs_1.html > > platform/mac/fast/scrolling/scroll-div-latched-mainframe.html > > these all seem unrelated I agree too
chris fleizach
Comment 18 2014-04-09 16:52:22 PDT
Note You need to log in before you can comment on or make changes to this bug.