Regression: AX: list heuristics sometimes determined as presentational even when explicit roles applied https://bugs.webkit.org/show_bug.cgi?id=131041

Reviewed by Mario Sanchez Prada.

Source/WebCore:

When display:table is used on a list item, it inserts RenderObjects that can be ignored as the children
of the list. This allows normal list heuristics to be applied.

* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::computeAccessibilityIsIgnored):

LayoutTests:

* accessibility/list-detection-expected.txt:
* accessibility/list-detection.html:



Canonical link: https://commits.webkit.org/149534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167052 268f45cc-cd09-0410-ab3c-d52691b4dbfc